test/data/semantic-errors/string-interpolation-undeclared-variable.ava
var x = 10;
"This is the number #{y}.";